[tool.poetry]
name = "trino-bouncer"
version = "0.1.0"
description = ""
authors = ["Devon Finninger <devonfinninger@gmail.com>"]
readme = "README.md"
packages = [{include = "trino_bouncer"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
trino = "^0.326.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
